--- a/example/svgIcon.html
+++ b/example/svgIcon.html
@@ -14,8 +14,15 @@
     <script src="../lib/myvue.umd.js"></script>
 </head>
 <body>
-	<div>
-	<svg-icon icon-class="lock"></svg-icon>	
+	<div id="app">
+		<icon-svg icon-class="满意度"></icon-svg>
+		<icon-svg icon-class="people"></icon-svg>
+		<icon-svg icon-class="爱心"></icon-svg>
 	</div>
 </body>
+<script>
+	new({
+		el:"#app",
+	})
+</script>
 </html>
