--- a/example/login.html
+++ b/example/login.html
@@ -16,29 +16,29 @@
 
 <body>
 <noscript>
-    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
+    <strong>We're sorry but <%= htmlWebpackPlugin.chooses.title %> doesn't work properly without JavaScript enabled.
         Please enable it to continue.</strong>
 </noscript>
 
 <div id="app">
     <h2>普通用户登录</h2>
-    <login :option="option" @submit="submit">
+    <login :choose="choose" @submit="submit">
     </login>
     <hr />
     <h2>图片验证码登录</h2>
-    <login :option="option1" @refresh="refresh" @submit="submit">
+    <login :choose="choose1" @refresh="refresh" @submit="submit">
     </login>
     <hr />
     <h2>手机号登录</h2>
-    <login :option="option2" @submit="submit" @send="send">
+    <login :choose="choose2" @submit="submit" @send="send">
     </login>
     <hr />
     <h2>调整边距</h2>
-    <login :option="option3" @submit="submit" @send="send">
+    <login :choose="choose3" @submit="submit" @send="send">
     </login>
     <hr />
     <h2>改变字段</h2>
-    <login :option="option4" @refresh="refresh" @submit="submit">
+    <login :choose="choose4" @refresh="refresh" @submit="submit">
     </login>
 </div>
 
@@ -50,115 +50,120 @@
         el: '#app',
         data() {
             return {
-                option: {
+                choose: {
                     width: 400,
                     time: 60,
-                    codeType: 'phone', //phone为手机验证码/img为图片验证码
+                    codeType: "phone",
                     column: {
-                        userName: {
+                        UserName: {
                             label: '用户名',
-                            tip:'请输入用户名',
-                            autocomplete: 'off',
-                            rules: { required: true, message: '请输入用户名', trigger: 'blur' }
+                            placeholder: "手机号/邮箱/用户名",
+                            prefixIcon: "el-icon-user",
+                            autocomplete: 'off'
                         },
                         password: {
                             label: '密码',
-                            autocomplete: 'off',
-                            rules: { required: true, message: '请输入密码', trigger: 'blur' }
+                            prefixIcon: "el-icon-unlock",
+                            placeholder: "请输入密码",
+                            autocomplete: 'off'
                         },
                         code: {
                             hide: true
                         }
                     }
                 },
-                option1: {
+                choose1: {
                     width: 400,
-                    codeType: 'img',
-                    codeSrc: '',
+                    codeType: "img",
+                    codeSrc: "",
                     column: {
-                        userName: {
-                            label: '用户名',
-                            placeholder: '手机号/邮箱/用户名',
-                            autocomplete: 'off',
-                            rules: { required: true, message: '请输入用户名', trigger: 'blur' }
-                        },
-                        password: {
-                            label: '密码',
-                            autocomplete: 'off',
-                            rules: { required: true, message: '请输入密码', trigger: 'blur' }
-                        },
-                        code: {
-                            label: '验证码',
-                            height: 40,
-                            tip: '点击图片可以刷新验证码',
-                            autocomplete: 'off',
-                            rules: { required: true, message: '请输验证码', trigger: 'blur' }
-                        }
+                    UserName: {
+                        label: "用户名",
+                        placeholder: "手机号/邮箱/用户名",
+                        autocomplete: "off",
+                        prefixIcon: "el-icon-user"
+                    },
+                    password: {
+                        prefixIcon: "el-icon-unlock",
+                        placeholder: "请输入密码",
+                        label: "密码",
+                        autocomplete: "off"
+                    },
+                    code: {
+                        label: "验证码",
+                        prefixIcon: "el-icon-c-scale-to-original",
+                        placeholder: "请输入验证码",
+                        height: 40,
+                        autocomplete: "off"
                     }
+                 }
                 },
-                option2: {
+                choose2: {
                     width: 400,
                     time: 60,
                     codeType: 'phone',
                     column: {
-                        userName: {
+                        UserName: {
                             label: '手机号',
                             prefixIcon: 'el-icon-mobile-phone',
                             placeholder: '手机号/邮箱/用户名',
-                            autocomplete: 'off',
-                            rules: { required: true, message: '请输入手机号', trigger: 'blur' }
+                            autocomplete: 'off'
                         },
                         password: {
                             hide: true,
                         },
                         code: {
                             label: '验证码',
-                            autocomplete: 'off',
-                            rules: { required: true, message: '请输验证码', trigger: 'blur' }
+                            prefixIcon: "el-icon-c-scale-to-original",
+                            placeholder: "请输入验证码",
+                            autocomplete: 'off'
                         }
                     }
                 },
-                option3: {
+                choose3: {
                     width: 400,
                     time: 60,
                     labelWidth: 120,
                     codeType: 'phone',
                     column: {
-                        userName: {
+                        UserName: {
                             label: '手机号',
                             prefixIcon: 'el-icon-mobile-phone',
                             placeholder: '手机号/邮箱/用户名',
-                            autocomplete: 'off',
-                            rules: { required: true, message: '请输入手机号', trigger: 'blur' }
+                            autocomplete: 'off'
                         },
                         password: {
                             hide: true,
                         },
                         code: {
                             label: '验证码',
-                            autocomplete: 'off',
-                            rules: { required: true, message: '请输验证码', trigger: 'blur' }
+                            prefixIcon: "el-icon-c-scale-to-original",
+                            placeholder: "请输入验证码",
+                            autocomplete: 'off'
                         }
                     }
                 },
-                option4: {
+                choose4: {
                     width: 400,
                     codeSrc: '',
+                    codeType: "img",
                     column: {
-                        userName: {
+                        UserName: {
                             label: '用户名',
-                            tip:'改变字段为user',
-                            prop:'user',
+                            placeholder: "手机号/邮箱/用户名",
+                            autocomplete: "off",
+                            prefixIcon: "el-icon-user"
                         },
                         password: {
                             label: '密码',
-                            tip:'改变字段为pass',
-                            prop:'pass',
+                            prefixIcon: "el-icon-unlock",
+                            placeholder: "请输入密码"
                         },
                         code: {
                             label: '验证码',
-                            tip:'改变字段为vaild',
-                            prop:'vaild',
+                            prefixIcon: "el-icon-c-scale-to-original",
+                            placeholder: "请输入验证码",
+                            autocomplete: 'off'
                         }
                     }
                 }
@@ -170,8 +175,8 @@
         methods: {
             refresh() {
                 this.$message.success('图片验证码刷新成功')
-                this.option1.codeSrc = "https://pigx.pig4cloud.com/code?randomStr=" + new Date().getTime();
-                this.option4.codeSrc = "https://pigx.pig4cloud.com/code?randomStr=" + new Date().getTime();
+                this.choose1.codeSrc = "https://pigx.pig4cloud.com/code?randomStr=" + new Date().getTime();
+                this.choose4.codeSrc = "https://pigx.pig4cloud.com/code?randomStr=" + new Date().getTime();
             },
             send(done) {
                 this.$message.success('验证码发送成功')
@@ -180,7 +185,7 @@
             submit(form) {
                 this.$message.success(JSON.stringify(form))
                 console.log(form);
-            }
+            },
         }
     })
 </script>
